# ChatAgent

./: .gitignore  main.py  pyproject.toml  readme.md
agent/: langgraph.py
agent/tools/: ask_for_permission.py  doc_finder.py  tools.py  weather.py
agent/tools/assets/: citycode.json
api/v1/: api.py  auth.py  chat.py
config/: config-template.toml  config.py
database/: database.py
frontend/: .gitignore  QUICK_START.md  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: GlobalSettings.tsx  MessageBubble.tsx  ProtectedRoute.tsx  SessionList.tsx
frontend/src/contexts/: LanguageContext.tsx
frontend/src/i18n/: translations.ts
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
models/: chatmodel.py  session.py  thread.py  usermodel.py
schemas/: chatschema.py  llm.py  userschema.py
services/: LLMService.py  cache_redis.py  chat.py  databaseservice.py  doc_spilt.py  memory.py  userservice.py
utils/: auth.py  llm_process.py  sanitization.py
