[project]
name = "community"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aio-pika==9.6.2",
    "asyncio>=4.0.0",
    "asyncpg==0.31.0",
    "fastapi>=0.135.2",
    "greenlet==3.3.2",
    "passlib==1.7.4",
    "psycopg==3.3.3",
    "python-jose==3.5.0",
    "redis==7.4.0",
    "sqlalchemy==2.1.0b1",
    "uvicorn>=0.42.0",
]
