[project]
name = "community"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aio-pika==9.6.2",
    "asyncio>=4.0.0",
    "asyncpg==0.31.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.135.2",
    "greenlet==3.3.2",
    "langchain>=1.2.15",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-postgres>=3.0.5",
    "loguru>=0.7.3",
    "mem0ai>=1.0.11",
    "passlib==1.7.4",
    "psycopg==3.3.3",
    "psycopg-pool>=3.3.0",
    "psycopg2>=2.9.11",
    "python-jose==3.5.0",
    "python-multipart>=0.0.26",
    "redis==7.4.0",
    "sqlalchemy==2.1.0b1",
    "structlog>=25.5.0",
    "uvicorn>=0.42.0",
]
