[project]
name = "community"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aio-pika==9.6.2",
    "asyncio>=4.0.0",
    "asyncpg==0.31.0",
    "bcrypt>=5.0.0",
    "chromadb>=1.5.8",
    "email-validator>=2.3.0",
    "fastapi>=0.135.2",
    "greenlet==3.3.2",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.1.12",
    "langchain-openrouter>=0.2.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langmem>=0.0.30",
    "loguru>=0.7.3",
    "mem0ai>=1.0.11",
    "openai>=2.31.0",
    "passlib==1.7.4",
    "pgvector>=0.4.2",
    "psycopg==3.3.3",
    "psycopg-pool>=3.3.0",
    "psycopg2>=2.9.11",
    "python-jose==3.5.0",
    "python-multipart>=0.0.26",
    "redis[asyncio]==7.4.0",
    "sentence-transformers>=5.4.1",
    "sqlalchemy==2.1.0b1",
    "structlog>=25.5.0",
    "toml>=0.10.2",
    "unstructured[md]>=0.22.22",
    "uvicorn>=0.42.0",
]
